ajout de la section welcom brut

--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
     </nav>
   </header>
   <body>
+    <div class="welcome">
+      <div class="icon-wrapper">
+        <img src="./img/github.png" alt="git-hub logo" class="github-logo" />
+      </div>
+      <h2 class="welcome-text">Welcome.</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id quasi
+        mollitia ut numquam possimus nesciunt a at quia facere, delectus error
+        doloribus, accusamus reiciendis quos nihil rem praesentium. Sit,
+        deleniti.
+      </p>
+      <button target="_blank" onclick="window.location.href = '';">
+        Let's Fork
+      </button>
+    </div>
     <main>
       <div class="wrapper">
         <div class="image-top">
