mis a jour de la section welcome bg modif

--- a/index.html
+++ b/index.html
@@ -36,19 +36,26 @@
   </header>
   <body>
     <div class="welcome">
-      <div class="icon-wrapper">
-        <img src="./img/github.png" alt="git-hub logo" class="github-logo" />
-      </div>
-      <h2 class="welcome-text">Welcome.</h2>
+      <h2 class="welcome-text">Hi, I'm Isaac Frontend Web</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id quasi
         mollitia ut numquam possimus nesciunt a at quia facere, delectus error
         doloribus, accusamus reiciendis quos nihil rem praesentium. Sit,
         deleniti.
       </p>
-      <button target="_blank" onclick="window.location.href = '';">
-        Let's Fork
-      </button>
+      <div class="social-icons">
+        <ul>
+          <li>
+            <a href="#"><i class="fa-brands fa-github-alt"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-regular fa-envelope"></i></a>
+          </li>
+        </ul>
+      </div>
     </div>
     <main>
       <div class="wrapper">
