--- a/index.html
+++ b/index.html
@@ -13,78 +13,65 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <header class="header">
-    <nav role="navigation" class="navbar" aria-label="main navigation">
-      <div class="logo-nav">
-        <a href="#">
-          <h2>Isaac</h2>
-        </a>
-      </div>
-      <div class="links-nav">
-        <ul>
-          <li><a class="links about" href="#">About</a></li>
-          <li><a class="links projects" href="#">Projects</a></li>
-          <li><a class="links contact" href="#">Contact</a></li>
-        </ul>
-      </div>
-      <div class="btn">
-        <a class="hamburger-btn" href="#" role="button" aria-label="menu"
-          ><i class="fa-solid fa-bars"></i
-        ></a>
-      </div>
-    </nav>
-  </header>
   <body>
-    <div class="welcome">
-      <h2 class="welcome-text">Hi, I'm Isaac Frontend Web</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id quasi
-        mollitia ut numquam possimus nesciunt a at quia facere, delectus error
-        doloribus, accusamus reiciendis quos nihil rem praesentium. Sit,
-        deleniti.
-      </p>
-      <div class="social-icons">
-        <ul>
-          <li>
-            <a href="#"><i class="fa-brands fa-github-alt"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-regular fa-envelope"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <main>
-      <div class="wrapper">
-        <div class="image-top">
-          <div class="image-profil"></div>
+    <header class="header">
+      <nav role="navigation" class="navbar" aria-label="main navigation">
+        <div class="logo-nav">
+          <a href="#">
+            <img src="./img/logo.png" alt="profil-picture" />
+          </a>
+          <p>IsaacFarih</p>
         </div>
-        <div class="profil-bottom">
-          <div class="profil-infos">
-            <div class="main-infos">
-              <h3 class="name">Isaac Farih</h3>
-              <p class="age grey">28</p>
-            </div>
-            <p class="email">isaac.farih@icloud.com</p>
-            <p class="town"><i class="fa-solid fa-location-dot"></i>Paris</p>
-          </div>
-          <section class="stat-section">
-            <div class="separation"></div>
-            <div class="skills-icons">
-              <i class="fa-brands fa-html5"></i>
-              <i class="fa-brands fa-css3"></i>
-              <i class="fa-brands fa-bootstrap"></i>
-              <i class="fa-brands fa-square-js"></i>
-              <i class="fa-brands fa-react"></i>
-              <i class="fa-brands fa-node-js"></i>
-            </div>
-          </section>
+        <div class="links-nav">
+          <ul>
+            <li><a class="links about" href="#">About</a></li>
+            <li><a class="links projects" href="#">Projects</a></li>
+            <li><a class="links contact" href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="btn">
+          <a class="hamburger-btn" href="#" role="button" aria-label="menu"
+            ><i class="fa-solid fa-bars"></i
+          ></a>
+        </div>
+      </nav>
+    </header>
+    <section class="welcome-sec">
+      <div class="welcome">
+        <h2 class="welcome-text">Hi, I'm Isaac Frontend Web</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id quasi
+          mollitia ut numquam possimus nesciunt a at quia facere, delectus error
+          doloribus, accusamus reiciendis quos nihil rem praesentium. Sit,
+          deleniti.
+        </p>
+        <div class="social-icons">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-github-alt"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-regular fa-envelope"></i></a>
+            </li>
+          </ul>
         </div>
       </div>
-    </main>
+    </section>
+    <section>
+      <div class="about-container">
+        <header class="about-sec">
+          <h2 class="about-text">About me</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+            impedit tenetur doloribus accusamus, reprehenderit eaque modi
+            adipisci fuga
+          </p>
+        </header>
+      </div>
+    </section>
   </body>
   <script>
     const hamburgerBtn = document.querySelector(".hamburger-btn");
