mis a jour de la section about

--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
       <div class="about-container">
         <header class="about-sec">
           <h2 class="about-text">About me</h2>
+          <span class="border"></span>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
             impedit tenetur doloribus accusamus, reprehenderit eaque modi
-            adipisci fuga
+            adipisci fuga lo
           </p>
         </header>
       </div>
