maj du portfolio version desktop structure ok

--- a/index.html
+++ b/index.html
@@ -71,8 +71,163 @@
             adipisci fuga lo
           </p>
         </header>
+        <div class="skills-container">
+          <div class="lets-fork">
+            <h3>Let's Fork !</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio temporibus enim vero commodi dignissimos? Expedita
+              illum inventore impedit? Nulla suscipit assumenda molestias
+              accusamus! Deleniti sint aliquid hic rerum unde nihil!
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque
+              illo eum delectus esse expedita blanditiis voluptates animi!
+              Voluptates voluptate ad, eius repellat quis similique est,
+              consequuntur tenetur natus rem debitis.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut,
+              earum esse. Eos magni dolore maxime quidem, veniam itaque saepe
+              culpa recusandae unde ducimus harum in quia similique fugiat odio
+              ad.
+            </p>
+            <div class="btn-contact-container">
+              <a href="#" class="btn-contact">Contact</a>
+            </div>
+          </div>
+          <div class="my-skills">
+            <h3>My skills</h3>
+            <div class="skills">
+              <div class="skills-skill">HTML</div>
+              <div class="skills-skill">CSS</div>
+              <div class="skills-skill">JavaScript</div>
+              <div class="skills-skill">React</div>
+              <div class="skills-skill">GIT</div>
+              <div class="skills-skill">Github</div>
+              <div class="skills-skill">Responsive Design</div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
+    <section>
+      <div class="projects-container">
+        <header class="projects-sec">
+          <h2 class="projects-text">projects</h2>
+          <span class="border"></span>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+            impedit tenetur doloribus accusamus, reprehenderit eaque modi
+            adipisci fuga lo
+          </p>
+        </header>
+        <div class="dopefolio-wrapper">
+          <div class="dopefolio">
+            <img src="./img/project-1.png" alt="Portfolio" />
+            <div class="dopefolio-comment">
+              <h3>Dopefolio</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                quibusdam ullam, quam officiis reprehenderit voluptatibus odit
+                voluptas eius, corporis hic tenetur quas impedit odio eaque
+                aliquid commodi voluptatum magnam itaque.
+              </p>
+              <div class="btn-contact-container">
+                <a href="#" class="btn-contact">Study</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="see-more">
+          <h3>You want to see more ?</h3>
+          <p>
+            tur adipisicing elit. Itaque odit nesciunt quo, voluptatum facilis
+            perferendis, ducimus aut asperiores eveniet repudiandae nam officiis
+            neque do
+          </p>
+          <a href="#">Visit Me</a>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="contact-container">
+        <div class="main-container">
+          <header class="contact-sec">
+            <h2 class="contact-text">Contact</h2>
+            <span class="border"></span>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+              impedit tenetur doloribus accusamus, reprehenderit eaque modi
+              adipisci fuga lo
+            </p>
+          </header>
+          <div class="form-container">
+            <form class="contact-form" action="#" method="post">
+              <div class="form-field">
+                <label for="name" class="form-label">Name</label>
+                <input
+                  type="text"
+                  id="name"
+                  class="form-input"
+                  placeholder="Enter Your Name"
+                  name="name"
+                  required
+                />
+              </div>
+              <div class="form-field">
+                <label for="email" class="form-label">Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  class="form-input"
+                  placeholder="Enter Your Email"
+                  name="email"
+                  required
+                />
+              </div>
+              <div class="form-field">
+                <label for="message" class="form-label">Message</label>
+                <textarea
+                  placeholder="Enter Your Message"
+                  name="message"
+                  class="form-input"
+                  id="message"
+                  cols="92"
+                  rows="10"
+                ></textarea>
+              </div>
+              <button class="btn-form" type="submit">submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="main-footer">
+        <div class="top-footer">
+          <div class="footer-row footer-row-1">
+            <h2 class="footer-title">Social</h2>
+            <div class="social-cont">
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+          </div>
+          <div class="footer-row footer-row-2">
+            <h2 class="footer-title">Isaac Farih</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+              iure veniam, neque dolorem
+            </p>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          © Copyright 2023. Made by
+          <a href="#" target="_blank" rel="no-referrer">Isaac Farih</a>
+        </div>
+      </div>
+    </footer>
   </body>
   <script>
     const hamburgerBtn = document.querySelector(".hamburger-btn");
