clean code replacing lorem

--- a/index.html
+++ b/index.html
@@ -14,86 +14,80 @@
     />
   </head>
   <body>
+    <!-- NAVBAR SECTION  -->
     <header class="header">
       <nav role="navigation" class="navbar" aria-label="main navigation">
         <div class="logo-nav">
-          <a href="#">
+          <a href="#welcome-short">
             <img src="./img/logo.png" alt="profil-picture" />
           </a>
           <p>IsaacFarih</p>
         </div>
         <div class="links-nav">
           <ul>
-            <li><a class="links about" href="#">About</a></li>
-            <li><a class="links projects" href="#">Projects</a></li>
-            <li><a class="links contact" href="#">Contact</a></li>
+            <li><a class="links about" href="#about-short">About</a></li>
+            <li>
+              <a class="links projects" href="#projects-short">Projects</a>
+            </li>
+            <li><a class="links contact" href="#contact-short">Contact</a></li>
           </ul>
-        </div>
-        <div class="btn">
-          <a class="hamburger-btn" href="#" role="button" aria-label="menu"
-            ><i class="fa-solid fa-bars"></i
-          ></a>
         </div>
       </nav>
     </header>
-    <section class="welcome-sec">
+    <!-- WELCOME SECTION  -->
+    <section id="welcome-short" class="welcome-sec">
       <div class="welcome">
-        <h2 class="welcome-text">Hi, I'm Isaac Frontend Web</h2>
+        <h2 class="welcome-text">Hi, I'm Isaac</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id quasi
-          mollitia ut numquam possimus nesciunt a at quia facere, delectus error
-          doloribus, accusamus reiciendis quos nihil rem praesentium. Sit,
-          deleniti.
+        Frontend-focused web developer, my role involves creating the user interface and features for websites and web applications.
         </p>
         <div class="social-icons">
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-github-alt"></i></a>
+              <a href="https://github.com/IsaacFarih" target="_blank"
+                ><i class="fa-brands fa-github-alt"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a
+                href="https://www.linkedin.com/in/isaacfarihdev/"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa-regular fa-envelope"></i></a>
+              <a href="mailto: isaac.farih@icloud.com" target="_blank"
+                ><i class="fa-regular fa-envelope"></i
+              ></a>
             </li>
           </ul>
         </div>
       </div>
     </section>
-    <section>
+    <!-- ABOUT SECTION  -->
+    <section id="about-short">
       <div class="about-container">
         <header class="about-sec">
           <h2 class="about-text">About me</h2>
           <span class="border"></span>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-            impedit tenetur doloribus accusamus, reprehenderit eaque modi
-            adipisci fuga lo
+            Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology 
           </p>
         </header>
         <div class="skills-container">
           <div class="lets-fork">
             <h3>Let's Fork !</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio temporibus enim vero commodi dignissimos? Expedita
-              illum inventore impedit? Nulla suscipit assumenda molestias
-              accusamus! Deleniti sint aliquid hic rerum unde nihil!
+              I'm a 28-year-old Brazilian Jiu-Jitsu competitor based in Île-de-France. Setting and conquering new goals and challenges is a part of my daily life.
             </p>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque
-              illo eum delectus esse expedita blanditiis voluptates animi!
-              Voluptates voluptate ad, eius repellat quis similique est,
-              consequuntur tenetur natus rem debitis.
+              With a background as a former sales manager, I bring a strong focus on customer satisfaction to my development work. My development skills align seamlessly with my drive to deliver a high-quality end product. My goal is to create technological solutions that not only meet customer needs but exceed them, all while maintaining a steadfast commitment to customer satisfaction.
             </p>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut,
-              earum esse. Eos magni dolore maxime quidem, veniam itaque saepe
-              culpa recusandae unde ducimus harum in quia similique fugiat odio
-              ad.
+              I'm actively seeking job opportunities where I can make meaningful contributions, expand my knowledge, and continue to develop professionally. If you have a promising opportunity aligned with my skills and experience, please feel free to reach out to me without hesitation.
             </p>
             <div class="btn-contact-container">
-              <a href="#" class="btn-contact">Contact</a>
+              <a href="mailto: isaac.farih@icloud.com" target="_blank"" class="btn-contact">Contact</a>
             </div>
           </div>
           <div class="my-skills">
@@ -111,15 +105,14 @@
         </div>
       </div>
     </section>
-    <section>
+    <!-- PROJECT SECTION  -->
+    <section id="projects-short">
       <div class="projects-container">
         <header class="projects-sec">
           <h2 class="projects-text">projects</h2>
           <span class="border"></span>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-            impedit tenetur doloribus accusamus, reprehenderit eaque modi
-            adipisci fuga lo
+            Explore my portfolio, which showcases both personal and client projects, each accompanied by its own detailed case study.
           </p>
         </header>
         <div class="dopefolio-wrapper">
@@ -128,95 +121,51 @@
             <div class="dopefolio-comment">
               <h3>Dopefolio</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-                quibusdam ullam, quam officiis reprehenderit voluptatibus odit
+                I created this portfolio as a personal challenge, using only HTML and CSS. It serves as a testament to my skills in web development fundamental.
               </p>
               <div class="btn-contact-container">
-                <a href="#" class="btn-contact">Study</a>
+                <a href="https://github.com/IsaacFarih/Portfolio" target="_blank" class="btn-contact">Study</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="see-more">
-          <h3>You want to see more ?</h3>
-          <p>
-            tur adipisicing elit. Itaque odit nesciunt quo, voluptatum facilis
-            perferendis, ducimus aut asperiores eveniet repudiandae nam officiis
-            neque do
-          </p>
-          <a href="#">Visit Me</a>
-        </div>
       </div>
     </section>
-    <section>
+    <!-- CONTACT SECTION  -->
+    <section id="contact-short">
       <div class="contact-container">
         <div class="main-container">
           <header class="contact-sec">
             <h2 class="contact-text">Contact</h2>
             <span class="border"></span>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-              impedit tenetur doloribus accusamus, reprehenderit eaque modi
-              adipisci fuga lo
+              If you're convinced and ready to connect, you can reach out to me right here. I'm just a message away.
             </p>
           </header>
-          <div class="form-container">
-            <form class="contact-form" action="#" method="post">
-              <div class="form-field">
-                <label for="name" class="form-label">Name</label>
-                <input
-                  type="text"
-                  id="name"
-                  class="form-input"
-                  placeholder="Enter Your Name"
-                  name="name"
-                  required
-                />
-              </div>
-              <div class="form-field">
-                <label for="email" class="form-label">Email</label>
-                <input
-                  type="email"
-                  id="email"
-                  class="form-input"
-                  placeholder="Enter Your Email"
-                  name="email"
-                  required
-                />
-              </div>
-              <div class="form-field">
-                <label for="message" class="form-label">Message</label>
-                <textarea
-                  placeholder="Enter Your Message"
-                  name="message"
-                  class="form-input"
-                  id="message"
-                  cols="92"
-                  rows="10"
-                ></textarea>
-              </div>
-              <button class="btn-form" type="submit">submit</button>
-            </form>
+          <div class="btn-contact-container">
+            <a href="https://www.linkedin.com/in/isaacfarihdev/" target="_blank" class="btn-contact">Let's Link</a>
           </div>
         </div>
       </div>
     </section>
+    <!-- FOOTER SECTION  -->
     <footer class="footer">
       <div class="main-footer">
         <div class="top-footer">
           <div class="footer-row footer-row-1">
             <h2 class="footer-title">Social</h2>
             <div class="social-cont">
-              <a href="#"><i class="fa-brands fa-github"></i></a>
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-              <a href="#"><i class="fa-solid fa-envelope"></i></a>
+              <a href="https://github.com/IsaacFarih/Portfolio" target="_blank"><i class="fa-brands fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/isaacfarihdev/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="mailto: isaac.farih@icloud.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
             </div>
           </div>
           <div class="footer-row footer-row-2">
             <h2 class="footer-title">Isaac Farih</h2>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
-              iure veniam, neque dolorem
+             
+
+Frontend-focused web developer, my role involves creating the user interface and features for websites and web applications. 
             </p>
           </div>
         </div>
@@ -227,12 +176,4 @@
       </div>
     </footer>
   </body>
-  <script>
-    const hamburgerBtn = document.querySelector(".hamburger-btn");
-    const linksNav = document.querySelector(".links-nav");
-
-    hamburgerBtn.addEventListener("click", () => {
-      linksNav.classList.toggle("mobile-menu");
-    });
-  </script>
 </html>
